Fix 'Cannot add foreign key to entity'

The search function used in the foreign
key constraints dialog box did not support
searching for subfolders.

BUG:404891
FIXED-IN:2.27.3 (KDE Applications 18.12.3)