umbrello/model_utils.cpp
@@ -328,6 +328,35 @@ UMLObject* findUMLObjectRaw(const UMLObjectList& inList,
 }
 
 /**
+ * Find the UML object of the given type and name in the passed-in list.
+ * This method searches for the raw name.
+ *
+ * @param inList        List in which to seek the object.
+ * @param name          Name of the object to find.
+ * @param type          ObjectType of the object to find (optional.)
+ *                      When the given type is ot_UMLObject the type is
+ *                      disregarded, i.e. the given name is the only
+ *                      search criterion.
+ * @return      Pointer to the UMLObject found, or NULL if not found.
+ */
+UMLObject* findUMLObjectRecursive(const UMLObjectList& inList,
+                                  const QString& name,
+                                  UMLObject::ObjectType type /* = ot_UMLObject */)
+{
+    foreach(UMLObject *obj, inList) {
+        if (obj->name() == name && type == obj->baseType())
+            return obj;
+        UMLPackage *pkg = obj->asUMLPackage();
+        if (pkg && pkg->containedObjects().size() > 0) {
+            UMLObject *o = findUMLObjectRecursive(pkg->containedObjects(), name, type);
+            if (o)
+                return o;
+        }
+    }
+    return 0;
+}
+
+/**
  * Get the root folder of the given UMLObject.
  */
 UMLPackage* rootPackage(UMLObject* obj)
