umbrello/umldoc.h
@@ -149,6 +149,14 @@ public:
                                 const QString &name,
                                 UMLObject::ObjectType type = UMLObject::ot_UMLObject);
 
+    UMLObject* findUMLObjectRecursive(Uml::ModelType::Enum,
+                                      const QString &name,
+                                      UMLObject::ObjectType type = UMLObject::ot_UMLObject);
+
+    UMLObject* findUMLObjectRecursive(UMLFolder *folder,
+                                      const QString &name,
+                                      UMLObject::ObjectType type = UMLObject::ot_UMLObject);
+
     UMLClassifier * findUMLClassifier(const QString &name);
 
     UMLView * findView(Uml::ID::Type id);
